--- a/doc/it/ChangeLog
+++ b/doc/it/ChangeLog
@@ -1,3 +1,8 @@
+2020-04-19         Antonio Giovanni Colombo   <azc100@gmail.com>
+
+	* gawk.1: Updated.
+	* gawktexi.in: Updated.
+
 2020-04-14         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* 5.1.0: Release tar ball made.
