Update copyright years in pc/ files.

--- a/pc/ChangeLog
+++ b/pc/ChangeLog
@@ -1,3 +1,17 @@
+2020-04-25  Eli Zaretskii  <eliz@gnu.org>
+
+	* Makefile.ext:
+	* Makefile.tst.prologue:
+	* Makefile:
+	* socket.h:
+	* popen.h:
+	* popen.c:
+	* getid.c:
+	* gawkmisc.pc:
+	* dlfcn.h:
+	* config.sed: Update copyright years.  Reported by Scott Deifik
+	<scottd.mail@sbcglobal.net>.
+
 2020-04-14         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* 5.1.0: Release tar ball made.
