Speedup to dfa.c.

--- a/support/ChangeLog
+++ b/support/ChangeLog
@@ -1,3 +1,8 @@
+2020-04-26         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* dfa.c: Speed improvements from Norihiro Tanaka <noritnk@kcn.ne.jp>,
+	copied in from the bug-grep list.
+
 2020-04-14         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* 5.1.0: Release tar ball made.
