Add Ascii Art statist picture for gawkinet.texi.

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,10 @@
+2020-04-26         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawkinet.texi: Include ASCII Art version of the statist
+	image. Thanks again to Manuel Collado.  Also update copyright
+	year and update month.
+	* statist.txt: New file.
+
 2020-04-20         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawkinet.texi: Include statist figure in HTML version. Thanks
