--- a/doc/gawkinet.texi
+++ b/doc/gawkinet.texi
@@ -62,7 +62,7 @@
 
 @set TITLE TCP/IP Internetworking with @command{gawk}
 @set EDITION 1.5
-@set UPDATE-MONTH July, 2019
+@set UPDATE-MONTH April, 2020
 @c gawk versions:
 @set VERSION 5.1
 @set PATCHLEVEL 0
@@ -72,7 +72,7 @@ This is Edition @value{EDITION} of @cite{@value{TITLE}},
 for the @value{VERSION}.@value{PATCHLEVEL} (or later) version of the GNU
 implementation of AWK.
 @sp 2
-Copyright (C) 2000, 2001, 2002, 2004, 2009, 2010, 2016, 2019
+Copyright (C) 2000, 2001, 2002, 2004, 2009, 2010, 2016, 2019, 2020
 Free Software Foundation, Inc.
 @sp 2
 Permission is granted to copy, distribute and/or modify this document
@@ -2887,6 +2887,12 @@ sure that none of the above reveals too much information about your system.
 @ifnotinfo
 @image{statist,3in}
 @end ifnotinfo
+@ifinfo
+@example
+@include statist.txt
+@end example
+@end ifinfo
+
 In the HTTP server examples we've shown thus far, we never present an image
 to the browser and its user. Presenting images is one task. Generating
 images that reflect some user input and presenting these dynamically
