Further fix in gawkinet.texi.

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -3,6 +3,7 @@
 	* gawkinet.texi: Include ASCII Art version of the statist
 	image. Thanks again to Manuel Collado.  Also update copyright
 	year and update month.
+	Also thanks to Manuel, remove extra @insertcopying for Info.
 	* statist.txt: New file.
 
 2020-04-20         Arnold D. Robbins     <arnold@skeeve.com>
