--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2020-05-08         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* zh_CN.po: Updated.
+	* sr.po: New file.
+	* LINGUAS: Updated.
+
 2020-04-14         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* 5.1.0: Release tar ball made.
