Small doc fix for gawkinet.texi.

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,8 @@
+2020-05-08         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawkinet.texi: Remove special casing for statist image for
+	Info. Makeinfo handles it just fine.
+
 2020-04-26         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawkinet.texi: Include ASCII Art version of the statist
