--- a/support/ChangeLog
+++ b/support/ChangeLog
@@ -1,3 +1,7 @@
+2020-05-08         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* dfa.c: Sync from GNULIB.
+
 2020-04-26         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* dfa.c: Speed improvements from Norihiro Tanaka <noritnk@kcn.ne.jp>,
