Update Swedish translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2020-05-14         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* sv.po: Updated.
+
 2020-05-08         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* zh_CN.po: Updated.
