Move to Bison 3.6.

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,11 @@
    are permitted in any medium without royalty provided the copyright
    notice and this notice are preserved.
 
+Changes from 5.0.1 to 5.0.2
+---------------------------
+
+1. Infrastructure upgrades: Bison 3.6.
+
 Changes from 5.0.1 to 5.1.0
 ---------------------------
 
