--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2020-05-14         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awkgram.c, command.c: Rebuild with Bison 3.6.
+	* NEWS: Updated.
+
 2020-05-06         Arnold D. Robbins     <arnold@skeeve.com>
 
 	Add lint check for string + string. It's not concatenation
