--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,7 @@
+2020-05-15         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawkworkflow.texi: Minor updates.
+
 2020-05-08         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawkinet.texi: Remove special casing for statist image for
