Update build aux files.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2020-05-15         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* config.guess, config.sub: Updated from GNULIB.
+
 2020-05-14         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* awkgram.c, command.c: Rebuild with Bison 3.6.
