--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,6 +1,7 @@
 2020-05-15         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawkworkflow.texi: Minor updates.
+	* texinfo.tex: Updated from GNULIB.
 
 2020-05-08         Arnold D. Robbins     <arnold@skeeve.com>
 
