--- a/doc/it/ChangeLog
+++ b/doc/it/ChangeLog
@@ -1,3 +1,7 @@
+2020-05-15         Antonio Giovanni Colombo   <azc100@gmail.com>
+
+	* texinfo.tex: Updated.
+
 2020-05-04         Marco Curreli              <marcocurreli@tiscali.it>
 
 	* gawktexi.in: Updated.
