Man page fixes.

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -7,6 +7,11 @@
 	* gawktexi.in: Improvements in switch statement and typed
 	regex sections.
 
+2020-05-24         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawk.1: Applied a number of troff "lint" fixes.
+	Thanks to Bjarni Ingi Gislason <bjarniig@rhi.hi.is>.
+
 2020-05-15         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawkworkflow.texi: Minor updates.
