Allow typed regex in return statement. Update the doc.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2020-06-05         Arnold D. Robbins     <arnold@skeeve.com>
 
+	* awkgram.y: Allow @/foo/ as return expression in a function.
+	Oops.
+
+2020-06-05         Arnold D. Robbins     <arnold@skeeve.com>
+
 	* configure.ac: Add call to AM_PROG_AR for use in
 	cross compiles.  Thanks to Sergei Trofimovich <slyfox@gentoo.org>
 	for the patch.
