--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,8 @@
+2020-06-05         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in: Improvements in switch statement and typed
+	regex sections.
+
 2020-05-15         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawkworkflow.texi: Minor updates.
