--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,7 @@
+2020-06-07         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* texinfo.tex: Updated from GNULIB.
+
 2020-06-05         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in: Improvements in switch statement and typed
