Revert dfa.c speedups of 26 April 2020.

--- a/support/ChangeLog
+++ b/support/ChangeLog
@@ -1,3 +1,8 @@
+2020-06-07         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* dfa.c: Revert changes of 26 April 2020. It causes
+	the dfastress test to fail on some compilers.
+
 2020-05-08         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* dfa.c: Sync from GNULIB.
