Improve doc on limits, increase limit on size of a token.

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,11 @@
 	(exec_count): Is now ldl.
 	* profile.c (pprint): Fix printf of exec_count.
 
+2020-06-09         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awkgram.y (tokexpand): Use size_t instead of int for size of
+	buffer.
+
 2020-06-08         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* awkgram.y: Fix `print $"2"' case. Thanks to Ed Morton
