--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,9 @@
+2020-06-09         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in (Implementation Limits): Update the table to be more
+	accurate and up to date. Note units of limits, per request from
+	Ed Morton <mortoneccc@comcast.net>.
+
 2020-06-07         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* texinfo.tex: Updated from GNULIB.
