Update to bison 3.6.3.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2020-06-10         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awkgram.c, command.c: Regenerated with bison 3.6.3.
+	* NEWS: Updated.
+
 2020-06-10         Andrew J. Schorr      <aschorr@telemetry-investments.com>
 
 	Convert exec_count from long long to unsigned long long.
