Improve asort and asorti treatment of SYMTAB and FUNCTAB. Document same.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2020-06-12         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* array.c (asort_actual): If SYMTAB or FUNCTAB is the second argument,
+	fatal out.   If they are the first argument, make it work when a
+	second argument is supplied.
+	* TODO: Updated.
+
 2020-06-10         Arnold D. Robbins     <arnold@skeeve.com>
 
 	More miscellaneous fixes from Michael Builov <mbuilov@gmail.com>.
