--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,8 @@
+2020-06-12         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in (String Functions): Update doc on asort and asorti
+	w.r.t. SYMTAB and FUNCTAB.
+
 2020-06-10         Andrew J. Schorr      <aschorr@telemetry-investments.com>
 
 	* bc_notes: Add new field `unsigned long long ldl' to INSTRUCTION,
