--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,7 @@
 	* array.c (asort_actual): If SYMTAB or FUNCTAB is the second argument,
 	fatal out.   If they are the first argument, make it work when a
 	second argument is supplied.
-	* TODO: Updated.
+	* TODO, NEWS: Updated.
 
 2020-06-10         Arnold D. Robbins     <arnold@skeeve.com>
 
