--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,10 @@ Changes from 5.0.1 to 5.0.2
 
 1. Infrastructure upgrades: Bison 3.6.3.
 
+2. asort and asorti now allow FUNCTAB and SYMTAB as the first argument if a
+   second destination array is supplied. Similarly, using either array as
+   the second argument is now a fatal error.
+
 Changes from 5.0.1 to 5.1.0
 ---------------------------
 
