Revise indexing in gawkworkflow.texi.

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,7 @@
+2020-06-14         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawkworkflow.texi: Revise indexing to use new Texinfo features.
+
 2020-06-12         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in (String Functions): Update doc on asort and asorti
